# hs-spotify

./: .gitignore  LICENSE  README.md  TODO  hs-spotify.cabal
Bindings/Spotify/: Album.hsc  AlbumBrowse.hsc  Artist.hsc  ArtistBrowse.hsc  CommonTypes.hs  Error.hsc  Image.hsc  Inbox.hsc  Link.hsc  Misc.hs  Misc.hsc  Playlist.hsc  Search.hsc  Session.hsc  Struct.hs  Toplist.hsc  Track.hsc  User.hsc
Spotify/: Error.hs
example/: high-login.hs  login.hs
server/: Actions.hs  Callbacks.hs  Client.hs  NetworkActions.hs  Server.hs
src/Bindings/Spotify/: Album.hsc  AlbumBrowse.hsc  Artist.hsc  ArtistBrowse.hsc  CommonTypes.hs  Error.hsc  Image.hsc  Inbox.hsc  Link.hsc  Misc.hsc  Playlist.hsc  Search.hsc  Session.hsc  Struct.hs  Toplist.hsc  Track.hsc  User.hsc
src/Spotify/: Error.hs  Link.hs  Session.hs  Struct.hs
test/: TestBindings.hs  TestRunner.hs
