Name: hs-spotify
Version: 1.0
Description: A library for Spotify
License: MIT
License-file: LICENSE
Author: Thomas Dziedzic
Maintainer: gostrc@gmail.com
Build-Type: Simple
Cabal-Version: >=1.10
Stability: experimental
Category: FFI

Library
  Build-Depends:
    base == 4.*
  Exposed-modules:
    Bindings.Spotify.Album
    Bindings.Spotify.AlbumBrowse
    Bindings.Spotify.Artist
    Bindings.Spotify.ArtistBrowse
    Bindings.Spotify.CommonTypes
    Bindings.Spotify.Error
    Bindings.Spotify.Image
    Bindings.Spotify.Inbox
    Bindings.Spotify.Link
    Bindings.Spotify.Misc
    Bindings.Spotify.Playlist
    Bindings.Spotify.Search
    Bindings.Spotify.Session
    Bindings.Spotify.Struct
    Bindings.Spotify.Toplist
    Bindings.Spotify.Track
    Bindings.Spotify.User

    Spotify.Error
  ghc-options:
    -Wall
  pkgconfig-depends:
    libspotify == 12.1.51
  default-language:
    Haskell2010
  default-extensions:
    EmptyDataDecls
    GeneralizedNewtypeDeriving

source-repository head
  type: git
  location: git://github.com/gostrc/hs-spotify.git
