Name: hs-spotify
Version: 1.0
Description: A library for Spotify
License: MIT
License-file: LICENSE
Author: Thomas Dziedzic
Maintainer: gostrc@gmail.com
Build-Type: Simple
Cabal-Version: >=1.10
Stability: experimental
Category: FFI
homepage: https://github.com/gostrc/hs-spotify
bug-reports: https://github.com/gostrc/hs-spotify/issues

Library
  Build-Depends:
    base == 4.*
  Exposed-modules:
    Bindings.Spotify.Album
    Bindings.Spotify.AlbumBrowse
    Bindings.Spotify.Artist
    Bindings.Spotify.ArtistBrowse
    Bindings.Spotify.CommonTypes
    Bindings.Spotify.Error
    Bindings.Spotify.Image
    Bindings.Spotify.Inbox
    Bindings.Spotify.Link
    Bindings.Spotify.Misc
    Bindings.Spotify.Playlist
    Bindings.Spotify.Search
    Bindings.Spotify.Session
    Bindings.Spotify.Struct
    Bindings.Spotify.Toplist
    Bindings.Spotify.Track
    Bindings.Spotify.User

    Spotify.Error
  hs-source-dirs:
    src
  ghc-options:
    -Wall
  pkgconfig-depends:
    libspotify == 12.1.51
  default-language:
    Haskell2010
  default-extensions:
    EmptyDataDecls
    GeneralizedNewtypeDeriving
  Extra-Libraries:
    spotify

Test-Suite bindings
  ghc-options:
    -Wall
  hs-source-dirs:
    src test
  main-is:
    TestRunner.hs
  type:
    exitcode-stdio-1.0
  Build-Depends:
    base == 4.*, HUnit
  default-language:
    Haskell2010
  PkgConfig-Depends:
    libspotify
  Extra-Libraries:
    spotify

source-repository head
  type: git
  location: git://github.com/gostrc/hs-spotify.git
